--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript"></script>
     <meta charset="UTF-8">
     <title>Angular 2 with Electron</title>
 
