--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script type="text/javascript"></script>
     <meta charset="UTF-8">
     <title>Angular 2 with Electron</title>
+    <link rel="stylesheet" href="node_modules/angular2-busy/build/style/busy.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="http://www.telerik.com/kendo-angular-ui/npm/node_modules//@progress/kendo-theme-default/dist/all.css" />
@@ -15,6 +16,7 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
+
 
     <script>
       System.import('app').catch(function(err){ console.error(err); });
