--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
+    <script src="node_modules/hammerjs/hammer.js"></script>
 
 
     <script>
@@ -25,6 +26,6 @@
 
 </head>
 <body>
-    <my-app>Loading...</my-app>
+    <my-app></my-app>
 </body>
 </html>
