--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/@progress/kendo-theme-bootstrap/dist/all.css" />
+    <link rel="stylesheet" href="table.css" />
 
 
     <!-- Necessary Imports -->
